add test join topology